Fixed custom props/dark mode bug

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -11,15 +11,22 @@ $padding-main: 1em;
 $line-height: 1.25em;
 
 :root{
-	--background: $white;
-	--text: $black;
+	--black: #000;
+	--white: #fff;
+
+	--background: var(--white);
+	--text: var(--black);
 }
 
 @media screen and (prefers-color-scheme: dark) {
 	:root {
-		--background: $black;
-		--text: $white;
+		--background: var(--black);
+		--text: var(--white);
 	}
+}
+
+@mixin dark{
+	@media screen and (prefers-color-scheme: dark){ @content; }
 }
 
 @font-face{
@@ -98,14 +105,6 @@ body{
 	margin: 0;
 	text-rendering: optimizeLegibility;
 	transition: background 0.5s ease-in-out;
-
-	@include r(sm){}
-
-	@include r(md){}
-
-	@include r(lg){}
-
-	@include r(xl){}
 }
 
 	a{
@@ -161,7 +160,6 @@ body{
 
 .site{
 	display: flex;
-		// align-items: center;
 	min-height: 100vh;
 	padding: 1rem;
 		padding-top: 0.2rem;
